# agenticOps

./: README.md
crewai/: requirements-crewai.txt
crewai/crew_ag_ops/: README.md  pyproject.toml  requirements.txt
crewai/crew_ag_ops/src/crew_ag_ops/: crew.py  main.py
crewai/crew_ag_ops/venv-crewai/: pyvenv.cfg
crewai/crewai-parser/: .gitignore  README.md  main.py  requirements.txt
crewai/crewai-parser/src/:  parser.py  agent.py  utils.py
crewai/crewai-parser/tests/: __init__.py  test_agent.py  test_parser.py
crewai/venv-crewai/: pyvenv.cfg
langchain/venv-langchain/: env  main.py  pyvenv.cfg  requirement.txt  requirements.txt
langchain/venv-langchain/agent_core/: executor.py  parser.py  reader.py
langchain/venv-langchain/data/: sample_ticket.txt
langchain/venv-langchain/playbooks/: create_user.yml
