[project]
name = "crew_ag_ops"
version = "0.1.0"
description = "crew_ag_ops using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
crew_ag_ops = "crew_ag_ops.main:run"
run_crew = "crew_ag_ops.main:run"
train = "crew_ag_ops.main:train"
replay = "crew_ag_ops.main:replay"
test = "crew_ag_ops.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
